syntax = "proto3";

package candidate;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.populate_all) = false;


message Profile {
    string Address = 1;
    bytes Ref = 2 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.Reference", (gogoproto.nullable) = false];
    uint32 ShortID = 3 [(gogoproto.customtype) = "github.com/insolar/insolar/insolar.ShortNodeID", (gogoproto.nullable) = false];
    uint32 PrimaryRole = 4 [(gogoproto.customtype) = "github.com/insolar/insolar/network/consensus/gcpv2/api/member.PrimaryRole", (gogoproto.nullable) = false];
    uint32 SpecialRole = 5 [(gogoproto.customtype) = "github.com/insolar/insolar/network/consensus/gcpv2/api/member.SpecialRole", (gogoproto.nullable) = false];
    bytes Digest = 6;
    bytes Signature = 7;
    bytes PublicKey = 8;
}
